--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "onaonbir/oo-role-permission",
     "description": "Flexible and polymorphic role & permission system for Laravel applications.",
     "type": "library",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "license": "MIT",
     "keywords": [
         "laravel",
@@ -11,11 +11,16 @@
         "authorization",
         "rbac",
         "polymorphic",
-        "package"
+        "package",
+        "performance",
+        "cache",
+        "production"
     ],
     "require": {
         "php": "^8.3",
-        "illuminate/support": "^10.0|^11.0|^12.0"
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/cache": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0"
     },
     "autoload": {
         "psr-4": {
